--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^6.6.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
+    "query-string": "^7.1.1",
     "winston": "^3.8.2"
   }
 }
