--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "axios": "^0.27.2",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.0",
