--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "vue": "^3.2.37",
+    "vue-jwt-decode": "^0.1.0",
     "vue-router": "^4.1.5",
     "vuex": "^4.0.2",
     "vuex-persist": "^3.1.3"
