--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vee-validate/rules": "^4.7.1",
     "axios": "^0.27.2",
+    "vee-validate": "^4.7.1",
     "vue": "^3.2.37",
     "vue-jwt-decode": "^0.1.0",
     "vue-router": "^4.1.5",
